<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Отправитель-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/sender_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/senderEtx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:hint="@string/sender_txv_hint"
            android:paddingTop="7dp"
            android:paddingBottom="12dp"
            android:textSize="20sp" />

        <!--Получатель-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/receiver_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/receiverEtx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:hint="@string/receiver_txv_hint"
            android:paddingTop="7dp"
            android:paddingBottom="12dp"
            android:textSize="20sp" />

        <!--Тема сообщения -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/subject_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/subjectEtx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:hint="@string/subject_txv_hint"
            android:paddingTop="7dp"
            android:paddingBottom="12dp"
            android:textSize="20sp" />

        <!-- Текст сообщения -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/text_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textEtx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="8dp"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="start"
            android:hint="@string/text_txv_hint"
            android:paddingTop="7dp"
            android:paddingBottom="12dp"
            android:textSize="20sp" />

        <!--Вложения-->
        <Switch
            android:id="@+id/swtAttachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/swt_attachments"
            android:textSize="18sp" />


    </LinearLayout>
</ScrollView>