<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ServiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Заголовок-->
        <TextView
            android:id="@+id/serviceActivityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="8dp"
            android:gravity="center_horizontal"
            android:text="@string/service_activity_title"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">
            <Button
                android:id="@+id/btnStartService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="45"
                android:backgroundTint="@color/conduct_el_main"
                android:text="@string/btn_start_service"
                android:textSize="11sp" />


            <Button
                android:id="@+id/btnStopService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="45"
                android:backgroundTint="@color/conduct_el_main"
                android:paddingVertical="6dp"
                android:text="@string/btn_stop_service"
                android:textSize="11sp"
                />

        </LinearLayout>

        <!--Фрагмент для вывода коллекци-->
        <fragment
            android:id="@+id/resultFragment"
            android:name="com.step.wagner.fragments.ContainerFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="12dp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="45dp"
        android:contentDescription="@string/btn_exit"
        app:srcCompat="@drawable/ic_add" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>